--- a/css/partials/history.css
+++ b/css/partials/history.css
@@ -1,40 +1,33 @@
 #page-history{
-    background-color: var(--color-secundary);
-}
-
-#page-history .header {
     display: flex;
-    /* justify-content: center; */
-    /* text-align: center; */
-    background-color: var(--color-primary);
-    width: 100%;
-    height: 6rem;
-    /* margin: 0 0 0 0; */
+    background-color: var(--color-beckground-with);
 }
 
-#page-history .header a {
-    text-decoration: none;
+#page-history #contener-history{
+    width: 90%;
+    margin: 0 auto;
+    /* display: flex; */
+    text-align: justify;
+}
+#page-history #contener-history h1{
+    width: 90%;
     text-align: center;
-}
-
-#page-history .header a h1{
-    text-decoration: none;
-    color: var(--color-text);
+    margin: 3rem;
+    margin-top: 5rem;
     font-size: 3rem;
-    width: 15rem;
-    margin: 1rem auto;
 }
-#page-history .header div{
-    display: -webkit-inline-flex;
-    margin-left: auto;
-}
-#page-history .header div a h2{
-    display: flex;
-    text-decoration: none;
-    text-align: center;
-    color: var(--color-text);
+#page-history #contener-history p{
+    width: 95%;
+    margin: 3rem auto;
     font-size: 2rem;
-    width: 10rem;
-    margin: 1.5rem auto 0 auto;
+}
+
+
+@media(min-width: 700px){
+    #page-history #contener-history p{
+        width: 600px;
     
+        margin: 1rem auto;
+        font-size: 2rem;
+    }
 }
