--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 :root{
-
     --color-primary: #333;
     --color-grau:#43438F;
     --color-background:#333333a9;
     --color-text:#FFFFFF;
-    --color-button:#262949;
+
+    --color-button:#b9b84c;
     --color-title:#748AB7;
     --color-secundary:#736A6D;
+    --color-text-input: #333333;
+    --color-text-fild:#f5f5f5;
+    --color-beckground-with:#f7f70071;
     /*tamanho da fonte padão: 16px - 100% - 1rem*/
     font: 60% arial ; /*9.6px  controle das medidas rem */
     
@@ -18,17 +21,12 @@
 }
 html,
 body{
-
     height: 100%;
 }
 
 body{
     display: flex;
     flex-direction: column;
-    /* width: 100%;  */
-   /* height: 100vh; */
-   /* box-shadow: border-box; */
-   /* flex-wrap: 1; */
 }
 
 
@@ -41,15 +39,30 @@ body{
     justify-content: center;
 }
 .footer{
+    text-align: center;
+    color: var(--color-title);
+ 
+    background-color: var(--color-primary);
     flex-shrink: 0;
+}
+.footer h3{
+    text-align: center;
+    color: var(--color-title);
+    font-size: 1rem;
+    margin: 1rem;
+}
+
+@media( min-width:700px){
+    :root{
+        font: 75% arial;
+    }
 }
 @media( min-width:1000px){
     :root{
         font: 80% arial;
     }
     .container{
-        width: 1000px;
-        /* max-width: 1000px; */
-        display: grid;
+        /* width: 1000px; */
+        max-width: 1000px;
     }
 }
